--- a/src/views/user-profile.pug
+++ b/src/views/user-profile.pug
@@ -1,5 +1,6 @@
 html
     head 
+        link(rel="stylesheet" href="/public/index.css")
     body 
         h1 User profile page 
         h2 Nickname 
